# Desktop_Display

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig
lvgl_proj/desktop_display_exported/: desktop_display.guiguider
lvgl_proj/desktop_display_exported/custom/: custom.h
lvgl_proj/desktop_display_exported/sdk/Core/source/: lv_conf.h
lvgl_proj/desktop_display_exported/sdk/iar/: lvgl_guider.ewp
lvgl_proj/desktop_display_exported/sdk/mcuxpresso/: .project
lvgl_proj/desktop_display_exported/sdk/mdk/: lvgl_guider.uvprojx
lvgl_proj/desktop_display_exported/sdk/vscode/: mcux_include.json
main/: CMakeLists.txt  Kconfig.projbuild  app_main.h  display_config.h  display_driver.c  display_driver.h  gui_guider_support.c  gui_guider_support.h  ha_settings.c  ha_settings.h  ha_sync.c  ha_sync.h  ha_ui.c  ha_ui.h  idf_component.yml  lv_conf.h  main.c  metrics.c  metrics.h  ota.c  ota.h  time_sync.c  time_sync.h  tinyusb_cdc.c  tinyusb_cdc.h  web_server.c  web_server.h  wifi.c  wifi.h
main/custom/: custom.c  custom.h
main/web/: settings.html
